--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -4,7 +4,7 @@
     background-color: var(--accent-color);
     color: var(--text-secondary);
     align-items: center;
-    
+
     .navbar-icons > * {
         cursor: pointer;
     }
@@ -42,6 +42,7 @@
 @media only screen and (max-width: 768px) {
     .navbar {
         flex-direction: column;
+        overflow: hidden;
 
         .navbar-links {
             display: flex;
